--- a/app/views/layouts/training_platform.html.erb
+++ b/app/views/layouts/training_platform.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Walnut</title>
+  <title><%= title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
   <%= stylesheet_link_tag    'training_platform', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'training_platform', 'data-turbolinks-track' => true %>
