--- a/app/views/training_platform/share/_task_show.html.erb
+++ b/app/views/training_platform/share/_task_show.html.erb
@@ -74,6 +74,11 @@
   <div class="row task-content">
     <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
       <h4> <%= @task.name %>
+      <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
+                <% @task.tags.any? %>
+                <% @task.tags.each do |tag| %>
+                <%= link_to tag.name %>
+                <% end %>
       <!-- <span class="dropdown">
         <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
           <%#= Task::State[@task.state.to_sym]%>
@@ -87,7 +92,20 @@
      </div> 
 
     <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
-     <form class="form-horizontal">
+    <%= simple_form_for  @task, url: training_platform_project_task_path, remote: true, format: :js do |f| %>
+          <div class="form-group">
+          <div class="col-xs-8">
+          <%= f.input :tag_list, placeholder: '请输入任务标签' %>
+          </div>
+           <div class="col-xs-2">
+          <%= f.submit "添加标签", class: "btn btn-success"%>
+          </div>
+          </div>
+      <% end %>
+
+
+
+     <!-- <form class="form-horizontal">
        <div class="form-group">
          <div class="col-xs-8">
            <input class="form-control" id="inputEmail3" placeholder="请输入任务标签">
@@ -96,7 +114,7 @@
            <botton class="btn btn-success">添加标签</botton>
          </div>
        </div>
-     </form>
+     </form> -->
     </div>
 
     <div class="col-xs-12 col-sm-12 col-lg-12 col-lg-12">
