--- a/app/views/training_platform/courses/index.html.erb
+++ b/app/views/training_platform/courses/index.html.erb
@@ -76,7 +76,7 @@
 							</div>
 							<!-- begin discuss -->
 							<div class="clearfix">
-								<% 4.times do %>
+								<% 3.times do %>
 									<!--begin local message -->
 									<div class="media">
 										<div class="media-left">
@@ -88,7 +88,7 @@
 											<div class="discuss-msg-left">	
 												<div class="pre"></div>
 												<div class="msg-bg ntent msg-left">
-													hellohellohellohellohellohellohello
+													你好啊你好啊你好啊你你好啊你好啊你好啊你你好啊你好啊你好啊你你好啊你好啊你好啊你你好啊你好啊你好啊你
 												</div>
 											</div>	
 										</div>
@@ -98,7 +98,7 @@
 									<div class="media">
 										<div class="media-body">
 											<div class="discuss-msg-right">
-												<div class="msg-bg msg-right">hellohellohellohellohellohellohello</div>
+												<div class="msg-bg msg-right">你好啊你好啊你好啊你你好啊你好啊你好啊你你好啊你好啊你好啊你你好啊你好啊你好啊你你好啊你好啊你好啊你</div>
 											</div>
 										</div>
 										<div class="media-right">
