--- a/app/assets/stylesheets/training_platform/courses.scss
+++ b/app/assets/stylesheets/training_platform/courses.scss
@@ -25,40 +25,54 @@
 	}
 	.msg-bg{
 		padding: 8px 12px;
-		display: inline;	
-		border-radius: 3px;	
+		max-width: 500px;
+		min-height: 1em;
+		display: inline-block;
+		vertical-align: top;
+		position: relative;
+		border-radius: 3px;
+		-moz-border-radius: 3px;
+		-webkit-border-radius: 3px;
 	}
 	.discuss-msg-left{
+		position: relative;
+		margin-left: 7px;
 		&:before{
 			content: " ";
-			float: left;
 			margin-top: 10px;	
 			border-top: 6px solid transparent;
 			border-bottom: 6px solid transparent;
 			border-right: 8px solid #DDD;
-			position: relative;
+			position: absolute;
+			left: -7px;
 		}
 		.msg-left{
 			border: 1px solid #DDD;
 			float: left;
+			margin: 0;
+			word-break: initial;
 		}
 		.pre{
-			margin-top: 11px;
-			margin-left: 1px;
+			margin-top: 10px;
 			position: absolute;
-			border-top: 5px solid transparent;
-			border-bottom: 5px solid transparent;
+			left: -6px;
+			border-top: 6px solid transparent;
+			border-bottom: 6px solid transparent;
 			border-right: 8px solid #fff;
+			z-index: 100;
 		}
 	}
 	.discuss-msg-right{
+		position: relative;
+		margin-right: 7px;
 		&:before{
 			content: " ";
-			float: right;
 			margin-top: 10px;	
 			border-top: 6px solid transparent;
 			border-bottom: 6px solid transparent;
 			border-left: 8px solid #B2E281;
+			position: absolute;
+			right: -7px;
 		}
 		.msg-right{
 			background-color: #B2E281;
