--- a/app/assets/stylesheets/training_platform/courses.scss
+++ b/app/assets/stylesheets/training_platform/courses.scss
@@ -25,7 +25,7 @@
 	}
 	.msg-bg{
 		padding: 8px 12px;
-		max-width: 500px;
+		max-width: 380px;
 		min-height: 1em;
 		display: inline-block;
 		vertical-align: top;
@@ -33,6 +33,11 @@
 		border-radius: 3px;
 		-moz-border-radius: 3px;
 		-webkit-border-radius: 3px;
+	}
+	.scollPart{
+		position: relative;
+		height: 400px;
+		overflow: auto;
 	}
 	.discuss-msg-left{
 		position: relative;
@@ -78,5 +83,10 @@
 			background-color: #B2E281;
 			float: right;
 		}
+	}
+	.addComment{
+		position: fixed;
+		bottom: 0;
+		padding: 10px;
 	}
 }
