--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -127,6 +127,9 @@
     min-height: 600px;
 
     .my-task{
+      h3{
+        margin-top: 10px;
+      }
       .my-line{
         border-color: #A4A4A4;
         margin: 10px 0;
@@ -195,6 +198,9 @@
     }
 
     .my-task{
+      h3{
+        margin-top: 10px;
+      }
       .my-line{
         border-color: #A4A4A4;
         margin: 10px 0;
