--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -124,7 +124,7 @@
   //左侧内容
   .ace_content_page_left {
     background-color: #fdfdfd;
-    min-height: 600px;
+    //min-height: 600px;
 
     .my-task{
       h3{
