--- a/app/assets/stylesheets/training_platform/courses.scss
+++ b/app/assets/stylesheets/training_platform/courses.scss
@@ -1,4 +1,8 @@
 .training_platform__courses__index{
+	.scoll-part{
+		position: relative;
+		overflow: hidden;
+	}
 	.plat-course-col{
 		padding: 0 5px;
 	}
@@ -34,10 +38,7 @@
 		-moz-border-radius: 3px;
 		-webkit-border-radius: 3px;
 	}
-	.scollPart{
-		position: relative;
-		overflow: auto;
-	}
+
 	.discuss-msg-left{
 		position: relative;
 		margin-left: 7px;
@@ -84,9 +85,16 @@
 		}
 	}
 	.addComment{
-		padding: 10px;
 		background-color: #fff;
 		position: fixed;
 		bottom: 1px;
+		right: 10px;
+		padding: 10px;
+		input[type="text"]{
+			border: 2px solid #19B29F;
+		}
+		.btn-sm{
+			background-color: #19B29F !important;
+		}
 	}
 }
