--- a/app/assets/stylesheets/training_platform/courses.scss
+++ b/app/assets/stylesheets/training_platform/courses.scss
@@ -14,6 +14,10 @@
 		overflow: hidden;
 		.mt-10{
 			margin-top: 10px;
+			.course-name{
+				color: #333;
+				font-size: 16px;
+			}
 		}
 		.infos {
 			color: #9b9b9b;
