--- a/app/views/training_platform/courses/index.html.erb
+++ b/app/views/training_platform/courses/index.html.erb
@@ -53,7 +53,7 @@
 											<%= link_to "#" do %>
 												<%= image_tag("course-index.gif", class: "img-responsive") %>
 												<div class="col-sm-12 mt-10">
-													<p class="text-muted"><%= 'course name' %></p>
+													<p class="course-name"><%= 'course name' %></p>
 													<p class="text-muted"><%= 'course description' %></p>
 												</div>
 												<div class="col-sm-12 infos">
