optimize course error

--- a/app/views/training_platform/courses/index.html.erb
+++ b/app/views/training_platform/courses/index.html.erb
@@ -112,7 +112,7 @@
 								<div class="addComment">
 									<form class="form-horizontal clearfix">
 										<div class="col-xs-10">
-											<input type="text" class="form-control input-sm" id="discussComment" placeholder="">
+											<input type="text" class="form-control input-sm" id="discussComment" placeholder="请输入讨论内容">
 										</div>
 										<button type="submit" class="btn btn-sm btn-info col-xs-2">发送</button>
 									</form>
