--- a/app/views/training_platform/task_categories/_detail.html.erb
+++ b/app/views/training_platform/task_categories/_detail.html.erb
@@ -10,6 +10,6 @@
     </div>
   </div>
 
-<%= render 'training_platform/share/widget'%>
+  <%= render partial: 'training_platform/share/comment', locals: {commentable: @task_category}%>
 
 </div>
