--- a/app/views/training_platform/share/_task_list.html.erb
+++ b/app/views/training_platform/share/_task_list.html.erb
@@ -11,108 +11,131 @@
     <hr class="my-line">
   </div>
 
-  <!-- 代办中任务 -->
-  <div class="task-list-content">
-    <h4 class="my-progress">待办中(<%= waits.size %>)</h4>
-    <!-- 没有任务提示 -->
-    <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有待办中的任务", is_show: waits.blank? } %>
-     <!-- 没有任务提示 -->
-    <% waits.each do |task|%>
-      <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
-        <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
-          <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            待办中
-            <span class="caret my-caret"></span>
-          </button>
-          <ul class="dropdown-menu task-state-dropdown" aria-labelledby="dropdownMenu1" data-task="<%= task.id%>">
-            <%= raw(staus_dropdown task.state, aasm_state_training_platform_project_task_path(@project,task))%>
-          </ul>
+  <div id="taskListAllContent">
+    <!-- 代办中任务 -->
+    <div class="task-list-content">
+      <h4 class="my-progress">待办中(<%= waits.size %>)</h4>
+      <!-- 没有任务提示 -->
+      <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有待办中的任务", is_show: waits.blank? } %>
+       <!-- 没有任务提示 -->
+      <% waits.each do |task|%>
+        <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
+          <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
+            <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              待办中
+              <span class="caret my-caret"></span>
+            </button>
+            <ul class="dropdown-menu task-state-dropdown" aria-labelledby="dropdownMenu1" data-task="<%= task.id%>">
+              <%= raw(staus_dropdown task.state, aasm_state_training_platform_project_task_path(@project,task))%>
+            </ul>
+            </div>
+          <%= link_to training_platform_project_task_path(task, project_id: @project.id), class: "task-link", remote: true, format: :js, id: "taskListLink#{task.id}" do %>
+          <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 no-padding"><span><%= task.name %></span></div>
+          <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span><%= task.end_time.try(:strftime, "%F") %></span></div>
+          <% end %>
           </div>
-        <%= link_to training_platform_project_task_path(task, project_id: @project.id), class: "task-link", remote: true, format: :js, id: "taskListLink#{task.id}" do %>
-        <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 no-padding"><span><%= task.name %></span></div>
-        <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span><%= task.end_time.try(:strftime, "%F") %></span></div>
-        <% end %>
+          <% end %>
         </div>
-        <% end %>
-      </div>
-  <!-- 代办中任务 -->
+    <!-- 代办中任务 -->
 
 
-  <!-- 进行中任务 -->
-  <div class="task-list-content">
-    <h4 class="my-progress">进行中(<%= dos.size %>)</h4>
-    <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有进行中的任务", is_show: dos.blank?} %>
-    <% dos.each do |task|%>
-      <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
-        <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
-          <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            进行中
-            <span class="caret my-caret"></span>
-          </button>
-          <ul class="dropdown-menu task-state-dropdown" aria-labelledby="dropdownMenu1" data-task="<%= task.id%>">
-            <%= raw(staus_dropdown task.state, aasm_state_training_platform_project_task_path(@project,task))%>
-          </ul>
+    <!-- 进行中任务 -->
+    <div class="task-list-content">
+      <h4 class="my-progress">进行中(<%= dos.size %>)</h4>
+      <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有进行中的任务", is_show: dos.blank?} %>
+      <% dos.each do |task|%>
+        <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
+          <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
+            <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              进行中
+              <span class="caret my-caret"></span>
+            </button>
+            <ul class="dropdown-menu task-state-dropdown" aria-labelledby="dropdownMenu1" data-task="<%= task.id%>">
+              <%= raw(staus_dropdown task.state, aasm_state_training_platform_project_task_path(@project,task))%>
+            </ul>
+          </div>
+          <%= link_to training_platform_project_task_path(task, project_id: @project.id), class: "task-link", remote: true, format: :js do %>
+            <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 no-padding"><span><%= task.name %></span></div>
+            <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span><%= task.end_time.try(:strftime, "%F") %></span></div>
+          <% end %>
         </div>
-        <%= link_to training_platform_project_task_path(task, project_id: @project.id), class: "task-link", remote: true, format: :js do %>
-          <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 no-padding"><span><%= task.name %></span></div>
-          <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span><%= task.end_time.try(:strftime, "%F") %></span></div>
-        <% end %>
-      </div>
-    <%end%>
+      <%end%>
+    </div>
+    <!-- 进行中任务 -->
+
+
+    <!-- 已完成任务 -->
+    <div class="task-list-content">
+      <h4 class="my-progress">已完成(<%= completes.size %>)</h4>
+      <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有已完成的任务", is_show: completes.blank?} %>
+      <% completes.each do |task|%>
+        <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
+          <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
+            <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              已完成
+              <span class="caret my-caret"></span>
+            </button>
+            <ul class="dropdown-menu task-state-dropdown" aria-labelledby="dropdownMenu1" data-task="<%= task.id%>">
+              <%= raw(staus_dropdown task.state, aasm_state_training_platform_project_task_path(@project,task))%>
+            </ul>
+          </div>
+          <%= link_to training_platform_project_task_path(task, project_id: @project.id), class: "task-link", remote: true, format: :js do %>
+            <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 no-padding"><span><%= task.name %></span></div>
+            <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span><%= task.end_time.try(:strftime, "%F") %></span></div>
+          <% end %>
+        </div>
+      <%end%>
+    </div>
+    <!-- 已完成任务 -->
+
+
+    <!-- 验收通过任务 -->
+    <div class="task-list-content">
+      <h4 class="my-progress">验收通过(<%= acceprances.size %>)</h4>
+      <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有验收通过的任务", is_show: acceprances.blank?} %>
+      <% acceprances.each do |task|%>
+        <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
+          <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
+            <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              验收通过
+              <span class="caret my-caret"></span>
+            </button>
+            <ul class="dropdown-menu task-state-dropdown" aria-labelledby="dropdownMenu1" data-task="<%= task.id%>">
+              <%= raw(staus_dropdown task.state, aasm_state_training_platform_project_task_path(@project,task))%>
+            </ul>
+          </div>
+          <%= link_to training_platform_project_task_path(task, project_id: @project.id), class: "task-link", remote: true, format: :js do %>
+            <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 no-padding"><span><%= task.name %></span></div>
+            <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span><%= task.end_time.try(:strftime, "%F") %></span></div>
+          <% end %>
+        </div>
+      <%end%>
+    </div>
+    <!-- 验收通过任务 -->
   </div>
-  <!-- 进行中任务 -->
-
-
-  <!-- 已完成任务 -->
-  <div class="task-list-content">
-    <h4 class="my-progress">已完成(<%= completes.size %>)</h4>
-    <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有已完成的任务", is_show: completes.blank?} %>
-    <% completes.each do |task|%>
-      <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
-        <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
-          <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            已完成
-            <span class="caret my-caret"></span>
-          </button>
-          <ul class="dropdown-menu task-state-dropdown" aria-labelledby="dropdownMenu1" data-task="<%= task.id%>">
-            <%= raw(staus_dropdown task.state, aasm_state_training_platform_project_task_path(@project,task))%>
-          </ul>
-        </div>
-        <%= link_to training_platform_project_task_path(task, project_id: @project.id), class: "task-link", remote: true, format: :js do %>
-          <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 no-padding"><span><%= task.name %></span></div>
-          <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span><%= task.end_time.try(:strftime, "%F") %></span></div>
-        <% end %>
-      </div>
-    <%end%>
-  </div>
-  <!-- 已完成任务 -->
-
-
-  <!-- 验收通过任务 -->
-  <div class="task-list-content">
-    <h4 class="my-progress">验收通过(<%= acceprances.size %>)</h4>
-    <%= render partial: "training_platform/share/task_blank", locals: {info: "现在没有验收通过的任务", is_show: acceprances.blank?} %>
-    <% acceprances.each do |task|%>
-      <div class="row task-list-row <%= 'active' if @task.try(:id) == task.id %>">
-        <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding dropdown">
-          <button class="btn btn-default dropdown-toggle dropdown-btn" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            验收通过
-            <span class="caret my-caret"></span>
-          </button>
-          <ul class="dropdown-menu task-state-dropdown" aria-labelledby="dropdownMenu1" data-task="<%= task.id%>">
-            <%= raw(staus_dropdown task.state, aasm_state_training_platform_project_task_path(@project,task))%>
-          </ul>
-        </div>
-        <%= link_to training_platform_project_task_path(task, project_id: @project.id), class: "task-link", remote: true, format: :js do %>
-          <div class="col-xs-12 col-sm-6 col-md-8 col-lg-8 no-padding"><span><%= task.name %></span></div>
-          <div class="col-xs-12 col-sm-3 col-lg-2 col-lg-2 no-padding"><span><%= task.end_time.try(:strftime, "%F") %></span></div>
-        <% end %>
-      </div>
-    <%end%>
-  </div>
-  <!-- 验收通过任务 -->
+  
 
 </div>
+
+<script type="text/javascript">
+  $(function(){
+    //计算左右模块高度以及讨论区宽度
+    var a = $(".navbar").outerHeight();
+    var b = $(".ace_content_right_title").outerHeight();
+    var c = $(".my-task").outerHeight();
+    var wnd = document.body.clientHeight;
+    var d = wnd - (a + b + c + 21) - document.body.scrollTop;
+    $('#taskListAllContent').slimScroll({
+      height: (d + 'px'),
+      alwaysVisible : false
+    });
+    // var chat = $(".ace_content_page_right").width();
+    // $(".addComment").width(chat);
+
+    // $(".scoll-part").perfectScrollbar();
+    // $(".scoll-part").perfectScrollbar('update');
+  });
+</script>
 
 
 <%= javascript_include_tag "training_platform/tasks", 'data-turbolinks-track' => true  %>
