--- a/app/views/training_platform/users/show.html.erb
+++ b/app/views/training_platform/users/show.html.erb
@@ -18,7 +18,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 task-left-content">
               <div class="row ace_content_left_title">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                  <%= link_to new_training_platform_project_task_path(project_id: @project.id, task_category_id: @task_category.try(:id), user_id: @user.try(:id)), remote: true, format: :js do %>
+                  <%= link_to new_training_platform_project_task_path(project_id: @project.id, task_category_id: @task_category.try(:id), user_id: @user.try(:id),s: params[:s]), remote: true, format: :js do %>
                     <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span><span class="ace_plus_word">添加任务</span>
                   <% end %>
                 </div>
