--- a/app/assets/stylesheets/training_platform/ace/tags.css
+++ b/app/assets/stylesheets/training_platform/ace/tags.css
@@ -1,9 +1,10 @@
 .ggTagContainer div {
     /*border: 1px solid #CCCCCC;*/
     border-radius: 3px 3px 3px 3px;
+    border-color: gray;
     color: #808080;
     height:60px;
-    width:397px;
+   /* width:397px;*/
     padding: 5px;
     font-size:13px;
 }
@@ -22,29 +23,30 @@
     cursor: pointer;
 }
 .ggTagContainer div .tag {
-    background: none repeat scroll 0 0 #ABBAC3;
+    background: none repeat scroll 0 0 #fff;
     border: 1px solid gray;
     border-radius:10px;
-    color: #fff;
+    color: gray;
     float: left;
     height: 22px;
     line-height: 22px;
     margin: 0 5px 5px 0;
     overflow: hidden;
-    padding: 0 5px 0 5px;
+    padding: 0 5px 0 15px;
     position: relative;
     white-space: nowrap;
 }
 .ggTagContainer div .tag a {
     cursor: pointer;
     overflow: hidden;
+    margin-left: 6px;
     color: red;
     text-decoration: none;
     font-size: 13px;
 }
 .ggTagContainer div #tag_input {
     width:80px;
-    border:0;
+    border:1px solid gray;
     border-radius: 0;
     box-shadow:0px 0px 0px;
 }
