modify projects/index.html.erb and projects.scss

--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -2,42 +2,42 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .main-bg{
-  background-color: #E8E8E8;
-  padding: 40px 0;
-  color: #fff;
-  .main{
-    margin:0 0px 15px 0px;
-    padding: 5px 0 20px;
-  }
-  .blue-bg{
-    background-color: #2EC8BA;
-  }
-  .yellow-bg{
-    background-color: #F6C22F;
-  }
-  .orange-bg{
-    background-color: #FF5A15;
-  }
-  .purple-bg{
-    background-color: #A600F9;
-  }
+	background-color: #E8E8E8;
+	padding: 40px 0;
+	color: #fff;
+	.main{
+		margin:0 0px 15px 0px;
+		padding: 5px 0 20px;
+	}
+	.blue-bg{
+		background-color: #2EC8BA;
+	}
+	.yellow-bg{
+		background-color: #F6C22F;
+	}
+	.orange-bg{
+		background-color: #FF5A15;
+	}
+	.purple-bg{
+		background-color: #A600F9;
+	}
 } 
 //home/index page
 
 .navbar {
-  background-color:#000!important;
-  color:#222 !important;
-  margin-bottom:0!important;
-  border-radius:0 !important;
+	background-color:#000!important;
+	color:#222 !important;
+	margin-bottom:0!important;
+	border-radius:0 !important;
 }
 
 .project_name {
-  text-align:center;
-  padding-bottom:5px;
-    .project_name_t {
-    font-size:18px;
-    color:#fff;
-}
+	text-align:center;
+	padding-bottom:5px;
+	.project_name_t {
+		font-size:18px;
+		color:#fff;
+	}
 }
 .ace-nav-left > li  {
   border-color:#222A2D!important;
@@ -46,22 +46,56 @@
     }
 }
 .ace_content_page_left, .ace_content_page_right{
-  border: solid 0.5px #e1e1e1;
-  .ace_content_right_title, .ace_content_left_title {
-    border: solid 1px #e1e1e1;
-    background-color:#19B29F;
-    padding:10px;
-    .input-icon > input {
-      border-radius:100px !important;
-    }
-    .ace_bell, .ace_ques {
-      margin:10px 5px;
-    }
-    .ace_plus {
-      margin:6.5px 5px;
-       padding:2px;
-      border:solid 2px #fff;
-      border-radius:10px;
-    }
-  }
+	// border: solid 0.5px #e1e1e1;
+	.ace_content_right_title, .ace_content_left_title {
+		border: solid 1px #e1e1e1;
+		background-color:#19B29F;
+		padding:10px;
+		margin-bottom: 10px;
+		.input-icon > input {
+			border-radius:100px !important;
+		}
+		.ace_bell, .ace_ques {
+			margin:10px 5px;
+		}
+		.ace_plus {
+			margin:6.5px 5px;
+			padding:2px;
+			border:solid 2px #fff;
+			border-radius:10px;
+		}
+	}
 }
+.my-task{
+	padding: 0 10px;
+	.my-line{
+		border-color: #A4A4A4;
+	}
+}
+.my-progress{
+	padding-left:20px; 
+}
+.backlog{
+	margin:10px 10px 10px 30px;
+	border:1px solid #ccc;
+	padding: 5px;
+	.col-xs-3{
+		padding: 0;
+	}
+	.business{
+		font-size: 16px;
+	}
+}
+.dropdown{
+	.my-btn{
+		padding: 2px 16px;
+		border-radius: 20px;
+		background-color: #fff !important;
+		color: #2adcc9 !important;
+		font-weight: normal;
+		.my-caret{
+			color: #000;
+		}
+	}
+}
+
